# FastAPI_learning

./: .editorconfig  .pre-commit-config.yaml  Dockerfile  Makefile  background_tasks.py  calc_views.py  docker-compose.yml  file for FastAPI tutorual.txt  item_views.py  main.py  model_views.py  pyproject.toml  requirements.txt  security_views.py  sotem_views.py  totem_views.py
core/models/: __init__.py  base.py
py-linters/: Dockerfile  pyproject.toml
src/: database.py  env_settings.py  exceptions.py  main.py  middlewares.py  time_formatter.py  tools.py  uvicorn_logging_config.yaml
src/core/: config.py
src/core/models/: product.py
src/users/: views.py
src/views/: item_views.py  other_views.py  sotem_views.py  totem_views.py
tests/: conftest.py  test_hello.py
users/: crud.py  schemas.py  views.py
views/: background_tasks.py  calc_views.py  model_views.py  security_views.py  sotem_views.py
