[tool.poetry]
name = "fastapi-learning"
version = "0.1.0"
description = ""
authors = ["mulchus <mulch@list.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standart"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiosqlite = "^0.19.0"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.6.0"}
python-multipart = "^0.0.7"
pyyaml = "^6.0.2"
httpx = "^0.28.1"
pytz = "^2025.2"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
